src/main.scss
$color-mint: #EEF8F6;
$color-navy: #27354f;
$nav-color-mint: #A4BFBA;
$nav-color-navy: #3a4860;
$footer-gray: #CED1D8;
$footer-menu-gray: #BECCE7;

* {
    box-sizing: border-box;
}
html, body {
    margin: 3% 3% 0% 3%;
}
ul {
    list-style: none;
    margin: 0;
    padding: 0;
}
.wrapper {
    background-color: $color-mint;
    max-width: 1200px;
    margin: 0 auto;
    min-height: 80vh;
}
.page-header {
    position: relative;
    width: 100%;
}
.page-logo{
    position: absolute;
    top: -40px;
    left: 40px;
    text-align: center;
    width: 120px;
    border: 2px solid $color-navy;
}
.page-navigation {
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    padding: 80px 10% 0% 170px;
    color: $nav-color-mint;

    &__items {
        display: flex;
        flex-direction: row;
        justify-content: space-between;
    }
    &__item {
        //padding-bottom: 1px;
        &-active {
            color: $color-navy;
            :after {
                content: "";
                display: block;
                margin-left: 0;
                width: calc(100% - 8px);
                border-bottom: 1px solid $color-navy;
            }
        }
        &:hover {
            ::after {
                content: "";
                display: block;
                margin-left: 0;
                width: calc(100% - 8px);
                border-bottom: 1px solid $color-navy;
            }
        }
    }
    &__link {
        text-align: center;
        text-decoration: none;
        cursor: pointer;

        &:hover{
            color: #415066;
        }

    }
}
.page-content {
    padding: 4% 10% 5% 170px;
    
    .drink-gallery {
        display: flex;
        flex-direction: row;
        flex-wrap: wrap;
        height: 90%;
        overflow: scroll;
        scroll-padding-right: 30px;

        &__item {    
            width: 33%;
            padding-bottom: 4%;
            padding-right: 4%;
            position: relative;
            display: flex;
            align-items: center;
            justify-content: center;
        }
        &__image {
            width: 100%;
        }
        &__desc {
            position: absolute;
            text-align: center;
            padding: 0;
            margin: 0;
            font-size: 30px;
            color: white;
            line-height: 50px;
            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
        }
    }
}

.page-footer {
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    padding: 1% 4% 1% 4%;
    display: flex;
    width: 100%;
    max-width: 1200px;
    margin: 0 auto;
}

.contact-section {
    width: 50%;
    display: flex;
    &__info {
        color: $footer-gray;
    }
    &__email {
        padding: 16px 10px;
        color: $color-navy;
        text-decoration: none;
    }
}
.media-menu{

    width: 50%;
    display: flex;
    flex-direction: row;
    justify-content: flex-end;

    &__header {
        color: $footer-gray;
        padding: 16px 10px;
        margin: 0;
        font-size: 16px;
        font-weight: normal;
    }
    &__items {
        margin: 0;
        padding: 0;
        display: flex;
        flex-direction: row;
    }
    &__item {
        padding: 16px 10px;
        
    }
    &__logo {
        height: 16px;
        fill: $footer-menu-gray;
        cursor: pointer;
    
    }
    
}

